# insights_generation

./: .gitignore  00_orchestrator.py  01_data_prep.py  02_bocpd.py  03_mmm_data_prep.py  04_mmm_fit.py  05_integration.py  06_validation.py  bocpd.py  config.py  data_prep.py  integration.py  job_runner.py  main.py  make_diagram.py  mmm_data_prep.py  nexora_poc_catalog.gold.bocpd_cp_candidates  orchestrator.py  pyproject.toml  requirements.txt  requirements_froze.txt  validation.py
.claude/: settings.local.json
insights_generation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/: bocpd.py  config.py  data_prep.py  insights.py  integration.py  mmm_data_prep.py  mmm_fit.py  validation.py
