[project]
name = "insights-generation"
version = "0.1.0"
description = "insights generation for data warehouse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arviz==1.1.0",
    "arviz-base==1.1.0",
    "arviz-plots==1.1.0",
    "arviz-stats==1.1.0",
    "bayesian-changepoint-detection==0.2.dev1",
    "h5netcdf==1.8.1",
    "netcdf4==1.7.4",
    "pymc==6.0.1",
]
